--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
   <footer id="contato">
     <div class="footer-content">
       <div class="social-links">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/projetolunaar/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/ProjetoLunaar"><i class="fab fa-facebook"></i></a>
+        <a href="https://wa.me/5565992701706"><i class="fab fa-whatsapp"></i></a>
       </div>
       <p>&copy; 2023 Associação Lunaar. Todos os direitos reservados.</p>
       <p>Desenvolvido por EagleWeb.</p>
