Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -73,19 +73,22 @@
     <div class="steps">
       <div class="step">
         <span>1</span>
-        <p>Escolha o animal no site ou abrigo.</p>
+        <p>Entre em contato com o WhatsApp da associação.</p>
       </div>
       <div class="step">
         <span>2</span>
-        <p>Visite o abrigo para conhecer o animal.</p>
+        <p>Seja entrevistado durante uma conversa.</p>
       </div>
       <div class="step">
         <span>3</span>
-        <p>Preencha o formulário de adoção.</p>
+        <p>Receba fotos e vídeos dos animais aptos para adoção.</p>
       </div>
       <div class="step">
         <span>4</span>
-        <p>Leve seu novo amigo para casa!</p>
+        <p>Escolha o pet de maneira online.</p>
+       <div class="step">
+       <span>5</span>
+       <p>Combine o melhor dia e horário para ir buscá-lo.</p>
       </div>
     </div>
   </section>
