--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <a href="https://wa.me/5565992701706"><i class="fab fa-whatsapp"></i></a>
       </div>
       <p>&copy; 2023 Associação Lunaar. Todos os direitos reservados.</p>
-      <p>Desenvolvido por EagleWeb.</p>
+      <p>Desenvolvido por Mariana Silva | EagleWeb.</p>
       <a href="https://mariana-silva.netlify.app">
       <img src="imagens/eagleweb.png">
     </a>
