--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="footer-column">
           <h3>Contato</h3>
           <ul>
-            <li><i class="fas fa-phone-alt"></i>(65) 99246-5672)</li>
+            <li><i class="fas fa-phone-alt"></i>(65) 99246-5672</li>
             <li><i class="fas fa-envelope"></i> contato@projetolunaar.com</li>
             <li><i class="fas fa-map-marker-alt"></i> Cuiabá, MT</li>
           </ul>
