--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           <h3>Contato</h3>
           <ul>
             <li><i class="fas fa-phone-alt"></i>(65) 99246-5672</li>
-            <li><i class="fas fa-envelope"></i> contato@projetolunaar.com</li>
+            <li><i class="fas fa-envelope"></i> associacaolunaar@gmail.com</li>
             <li><i class="fas fa-map-marker-alt"></i> Cuiabá, MT</li>
           </ul>
         </div>
